[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ipfshttpclient"

author       = "py-ipfs-http-client team"
author-email = ""
home-page    = "https://ipfs.io/ipns/12D3KooWEqnTdgqHnkkwarSrJjeMP2ZJiADWLYADaNvUb6SQNyPF/"
keywords     = "ipfs storage distribution development"
license      = "MIT License"
description-file = "README.md"

# Unfortunately these currently need to be duplicated from `requirements.txt`
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
requires = [
	"multiaddr (>=0.0.7)",
	"requests (>=2.11)",
	"six"
]

classifiers = [
	"Development Status :: 3 - Alpha",

	# Indicate who your project is intended for
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Science/Research",

	"Topic :: Internet",
	"Topic :: Scientific/Engineering",
	"Topic :: System :: Filesystems",
	"Topic :: System :: Networking",

	# Pick your license as you wish (should match "license" above)
	"License :: OSI Approved :: MIT License",

	# Specify the Python versions you support here. In particular, ensure
	# that you indicate whether you support Python 2, Python 3 or both.
	"Programming Language :: Python :: 2",
	"Programming Language :: Python :: 2.7",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.4",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6"
]

[tool.flit.metadata.urls]
Documentation = "https://ipfs.io/ipns/12D3KooWEqnTdgqHnkkwarSrJjeMP2ZJiADWLYADaNvUb6SQNyPF/docs/"

