[build-system]
requires = ["flit-core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ipfshttpclient"

author       = "py-ipfs-http-client team"
author-email = ""
home-page    = "https://ipfs.io/ipns/12D3KooWEqnTdgqHnkkwarSrJjeMP2ZJiADWLYADaNvUb6SQNyPF/"
keywords     = "ipfs storage distribution development"
license      = "MIT License"
description-file = "README.md"

# Notes: `typing.NoReturn` was introduced post-release in Python 3.5.4 and 3.6.2 and had
#        a critical bug (https://bugs.python.org/issue34921) in 3.7.0 to 3.7.1. So the
#        compatible versions below reflect the range of Python versions with working
#        `typing.NoReturn` function signature support. (Also, many other `typing` module
#        items were only introduced post-release of Python 3.5 and 3.6 and version
#        restrictions on these versions ensure that those are all available as well.)
requires-python = ">=3.5.4,!=3.6.0,!=3.6.1,!=3.7.0,!=3.7.1"
requires = [
	"multiaddr (>=0.0.7)",
	"requests (>=2.11)"
]

classifiers = [
	"Development Status :: 3 - Alpha",

	# Indicate who your project is intended for
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Science/Research",

	"Topic :: Internet",
	"Topic :: Scientific/Engineering",
	"Topic :: System :: Filesystems",
	"Topic :: System :: Networking",

	# Pick your license as you wish (should match "license" above)
	"License :: OSI Approved :: MIT License",

	# Specify the Python versions you support here. In particular, ensure
	# that you indicate whether you support Python 2, Python 3 or both.
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8"
]

[tool.flit.metadata.urls]
Documentation = "https://ipfs.io/ipns/12D3KooWEqnTdgqHnkkwarSrJjeMP2ZJiADWLYADaNvUb6SQNyPF/docs/"

